<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_once_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_reminder_info" />

    <Switch
        android:id="@+id/daily_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/repeating_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_time" />
    <TextView
        android:id="@+id/repeating_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_message" />


    <TextView
        android:layout_marginTop="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/release_reminder"
        android:textSize="16sp"
        android:textStyle="bold" />
    <TextView
            android:id="@+id/tv_repeating_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_reminder_info" />
    <Switch
        android:id="@+id/release_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />
    <TextView
        android:id="@+id/repeating_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_time" />
    <TextView
        android:id="@+id/repeating_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_message" />



</LinearLayout>
